2014-08-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvi.c: Drop unused variable. Use "%lu" for unsigned long vars.

2014-08-16  Khaled Hosny  <khaledhosny@eglug.org>

	* dvi.c, dvicodes.h, fontmap.c, fontmap.h: Switch to XDV version 6
	used by latest XeTeX.

2014-08-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c, pdflimits.h: Set PDF_VERSION_DEFAULT = 5 to be
	consistent with dvipdfmx.cfg.

2014-08-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdfobj.c: Avoid unconstifying casts. Drop unused variable.
	Avoid possibly uninitialized use of variable filter_name.

2014-08-14  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfobj.c: Return 1 even if the PDF version of included file is
	newer than the assumed version in check_for_pdf(), because
	load_image() in pdfximage.c needs very long time if format ==
	IMAGE_TYPE_UNKNOWN and the file size is very large.
	Anyway the inclusion of the PDF file fails.

2014-08-14  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* epdf.c, pdfobj.c: Support streams with DecodeParms.

2014-08-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvipdfm-bb.test, xdvipdfm-bb.test: Also test .bmp and .jp2.
	* tests/image.{bmp,dvi,jp2,tex}: Additional test input.
	* tests/{img,pic}{bmp,jp2}.{bb,xbb}: Expected test output.
	* Makefile.am (EXTRA_DIST): Add the new files.

2014-08-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* jp2image.c: Declare scan_file() as static. Drop variables
	that are set but not used [-Wunused-but-set-variable].

2014-08-11  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* bmpimage.[ch], jp2image.[ch] (new), pdfximage.c, xbb.c:
	Add support for JPEG 2000 (JP2 and JPX baseline subset) and
	BMP support for extractbb.

2014-08-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop libutil.a, i.e., compile all files once for
	dvipdfmx and once for xdvipdfmx.

2014-08-05  Jiang Jiang  <gzjjgod@gmail.com>

	* tt_cmap.c (otf_create_ToUnicode_stream, create_ToUnicode_cmap):